Add: header for desktop

--- a/index.html
+++ b/index.html
@@ -18,13 +18,51 @@
 <body>
     <div class="wrapper">
         <div class="flex">
-            <section class="sidebar"></section>
+            <!-- sidebar -->
+            <section class="sidebar">
+                <div>
+                    <a href=""><img src="img/logo.svg" alt="Spotify big logo" class="big-logo"></a>
+                    <!-- navigation list -->
+                    <ul class="navigation-list">
+                        <li><a href=""><i class="fa-solid fa-house symbol-list"></i>Home</a></li>
+                        <li><a href=""><i class="fa-solid fa-magnifying-glass symbol-list"></i>Cerca</a></li>
+                        <li><a href=""><i class="fa-solid fa-house symbol-list"></i>La tua libreria</a></li>
+                    </ul>
+                    <!-- end navigation list -->
+                    <!-- playlist -->
+                    <h5 class="playlist-title">Playlist</h5>
+                    <ul class="playlist">
+                        <li><a href=""><i class="fa-solid fa-square-plus symbol-list square-plus"></i>Crea Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                    </ul>
+                    <!-- end playlist -->
+                </div>
+                <div>
+                    <div class="download"><img src="img/download.svg" alt="download icon" class="sidebar-download-icon">Installa app</div>
+                    <hr class="sidebar-footer-hr">
+                    <div class="profile">
+                        <img src="img/profile.svg" alt="Profile photo" class="sidebar-profile-icon">John Doe
+                    </div>
+                </div>
+            </section>
+            <!-- end sidebar -->
             <main>
+                <!-- header -->
                 <div class="header"></div>
+                <!-- end header -->
+
+                <!-- content -->
                 <div class="content"></div>
+                <!-- end content -->
             </main>
+            <!-- end main -->
         </div>
-        <!-- end main -->
 
         <!-- footer -->
         <footer></footer>
