Add: header for desktop

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
             <!-- end sidebar -->
             <main>
                 <!-- header -->
-                <div class="header"></div>
+                <div class="header">
+                    <a href="" class="upgrade-button">Effettua l'upgrade</a>
+                </div>
                 <!-- end header -->
 
                 <!-- content -->
