Add: sidebar responsiveness

--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
             <section class="sidebar">
                 <div>
                     <a href=""><img src="img/logo.svg" alt="Spotify big logo" class="big-logo"></a>
+                    <a href=""><img src="img/logo-small.svg" alt="Spotify small logo" class="small-logo"></a>
                     <!-- navigation list -->
                     <ul class="navigation-list">
-                        <li><a href=""><i class="fa-solid fa-house symbol-list"></i>Home</a></li>
-                        <li><a href=""><i class="fa-solid fa-magnifying-glass symbol-list"></i>Cerca</a></li>
-                        <li><a href=""><i class="fa-solid fa-house symbol-list"></i>La tua libreria</a></li>
+                        <li><a href=""><img src="img/home.svg" alt="home icon" class="list-icon">
+                        <span class="text">Home</span></a></li>
+                        <li><a href=""><img src="img/search.svg" alt="search icon" class="list-icon">
+                        <span class="text">Cerca</span></a></li>
+                        <li><a href=""><img src="img/libreria.svg" alt="book shelf icon" class="list-icon">
+                        <span class="text">La tua libreria</span></a></li>
                     </ul>
                     <!-- end navigation list -->
                     <!-- playlist -->
@@ -44,10 +48,10 @@
                     <!-- end playlist -->
                 </div>
                 <div>
-                    <div class="download"><img src="img/download.svg" alt="download icon" class="sidebar-download-icon">Installa app</div>
+                    <a href=""><div class="download"><img src="img/download.svg" alt="download icon" class="sidebar-download-icon"><span class="text">Installa app</span></div></a>
                     <hr class="sidebar-footer-hr">
                     <div class="profile">
-                        <img src="img/profile.svg" alt="Profile photo" class="sidebar-profile-icon">John Doe
+                        <a href=""><img src="img/profile.svg" alt="Profile photo" class="sidebar-profile-icon"><span class="text">John Doe</span></a>
                     </div>
                 </div>
             </section>
