Content's categories in desktop and first tests in responsive

--- a/index.html
+++ b/index.html
@@ -64,7 +64,18 @@
                 <!-- end header -->
 
                 <!-- content -->
-                <div class="content"></div>
+                <div class="content">
+                    <div class="categories">
+                        <ul class="categories-list">
+                            <li><a href="">In evidenza</a></li>
+                            <li><a href="">Podcast</a></li>
+                            <li><a href="">Classifiche</a></li>
+                            <li><a href="">Generi e mood</a></li>
+                            <li><a href="">Nuove uscite</a></li>
+                            <li><a href="">Scopri</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <!-- end content -->
             </main>
             <!-- end main -->
