--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
                             <li><a href="">Scopri</a></li>
                         </ul>
                     </div>
+                    <h2 class="content-title">Recently played</h2>
+                    <div class="grid">
+                        <div class="card"></div>
+                        <div class="card"></div>
+                        <div class="card"></div>
+                        <div class="card"></div>
+                        <div class="card"></div>
+                        <div class="card"></div>
+
+                    </div>
                 </div>
                 <!-- end content -->
             </main>
