Add: content layout for desktop

--- a/index.html
+++ b/index.html
@@ -77,13 +77,66 @@
                     </div>
                     <h2 class="content-title">Recently played</h2>
                     <div class="grid">
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
+                        <div class="card">
+                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
+                            <h5 class="song-title">Heavy metal</h5>
+                            <div class="album-subtitle">Subtitle</div>
+                        </div>
+                        <div class="card">
+                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
+                            <h5 class="song-title">Heavy metal</h5>
+                            <div class="album-subtitle">Subtitle</div>
+                        </div>
+                        <div class="card">
+                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
+                            <h5 class="song-title">Heavy metal</h5>
+                            <div class="album-subtitle">Subtitle</div>
+                        </div>
+                        <div class="card">
+                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
+                            <h5 class="song-title">Heavy metal</h5>
+                            <div class="album-subtitle">Subtitle</div>
+                        </div>
+                        <div class="card">
+                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
+                            <h5 class="song-title">Heavy metal</h5>
+                            <div class="album-subtitle">Subtitle</div>
+                        </div>
+                        <div class="card">
+                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
+                            <h5 class="song-title">Heavy metal</h5>
+                            <div class="album-subtitle">Subtitle</div>
+                        </div>
+                    </div>
 
+                    <!-- Created for -->
+                    <h2 class="content-title">Creato per John Doe</h2>
+                    <div class="content-subtitle">Più ascolti, più accurati saranno i suggerimenti.</div>
+                    <div class="grid">
+                        <div class="card">
+                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
+                            <h5 class="song-title">Heavy metal</h5>
+                            <div class="album-subtitle">Subtitle</div>
+                        </div>
+                        <div class="card">
+                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
+                            <h5 class="song-title">Heavy metal</h5>
+                            <div class="album-subtitle">Subtitle</div>
+                        </div>
+                    </div>
+
+                    <!-- popular artists -->
+                    <h2 class="content-title">Artisti più popolari</h2>
+                    <div class="content-subtitle">Più ascolti, più accurati saranno i suggerimenti.</div>
+                    <div class="grid">
+                        <div class="card">
+                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
+                            <h5 class="song-title">Lana Del Rey</h5>
+                        </div>
+                        <div class="card">
+                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
+                            <h5 class="song-title">Ludovico Einaudi</h5>
+                        </div>
                     </div>
                 </div>
                 <!-- end content -->
