Add: details in main content

--- a/index.html
+++ b/index.html
@@ -75,36 +75,37 @@
                             <li><a href="">Scopri</a></li>
                         </ul>
                     </div>
+                    <!-- recently played -->
                     <h2 class="content-title">Recently played</h2>
                     <div class="grid">
                         <div class="card">
-                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
+                            <img src="img/metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
                             <h5 class="song-title">Heavy metal</h5>
                             <div class="album-subtitle">Subtitle</div>
                         </div>
                         <div class="card">
-                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
-                            <h5 class="song-title">Heavy metal</h5>
+                            <img src="img/stranger.jpeg" alt="Stranger Things" class="albums">
+                            <h5 class="song-title">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h5>
+                            <div class="album-subtitle">Kyle Dixon and Michael Stein</div>
+                        </div>
+                        <div class="card">
+                            <img src="img/aquietplace.jpeg" alt="A Quiet place" class="albums">
+                            <h5 class="song-title">A quiet place</h5>
                             <div class="album-subtitle">Subtitle</div>
                         </div>
                         <div class="card">
-                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
-                            <h5 class="song-title">Heavy metal</h5>
+                            <img src="img/split.jpeg" alt="Split" class="albums">
+                            <h5 class="song-title">Split</h5>
                             <div class="album-subtitle">Subtitle</div>
                         </div>
                         <div class="card">
-                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
-                            <h5 class="song-title">Heavy metal</h5>
+                            <img src="img/cure.jpeg" alt="A cure for wellness" class="albums">
+                            <h5 class="song-title">A cure for wellness</h5>
                             <div class="album-subtitle">Subtitle</div>
                         </div>
                         <div class="card">
-                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
-                            <h5 class="song-title">Heavy metal</h5>
-                            <div class="album-subtitle">Subtitle</div>
-                        </div>
-                        <div class="card">
-                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
-                            <h5 class="song-title">Heavy metal</h5>
+                            <img src="img/sinister.jpeg" alt="Sinister" class="albums">
+                            <h5 class="song-title">Sinister</h5>
                             <div class="album-subtitle">Subtitle</div>
                         </div>
                     </div>
@@ -114,14 +115,12 @@
                     <div class="content-subtitle">Più ascolti, più accurati saranno i suggerimenti.</div>
                     <div class="grid">
                         <div class="card">
-                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
-                            <h5 class="song-title">Heavy metal</h5>
-                            <div class="album-subtitle">Subtitle</div>
+                            <img src="img/radar.jpeg" alt="Release radar" class="albums">
+                            <h5 class="song-title">Release radar</h5>
                         </div>
                         <div class="card">
-                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
-                            <h5 class="song-title">Heavy metal</h5>
-                            <div class="album-subtitle">Subtitle</div>
+                            <img src="img/mixdaily.jpeg" alt="Daily mix" class="albums">
+                            <h5 class="song-title">Daily mix 1</h5>
                         </div>
                     </div>
 
@@ -130,11 +129,11 @@
                     <div class="content-subtitle">Più ascolti, più accurati saranno i suggerimenti.</div>
                     <div class="grid">
                         <div class="card">
-                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
+                            <img src="img/youg.jpeg" alt="Lana Del Rey Youg" class="albums singers">
                             <h5 class="song-title">Lana Del Rey</h5>
                         </div>
                         <div class="card">
-                            <img src="img//metal_lifting.jpg" alt="Heavy Metal collection" class="albums">
+                            <img src="img/einaudi.jpeg" alt="Ludovico Einaudi" class="albums singers">
                             <h5 class="song-title">Ludovico Einaudi</h5>
                         </div>
                     </div>
