Responsiveness left footer

--- a/index.html
+++ b/index.html
@@ -144,7 +144,34 @@
         </div>
 
         <!-- footer -->
-        <footer></footer>
+        <footer>
+            <div class="music-player">
+                <div class="left-footer">
+                    <img src="img/sinister.jpeg" alt="Sinister" class="song-player-photo">
+                    <div class="song-name">
+                        <div class="song">Sinister</div>
+                        <div class="name">Brano name</div>
+                    </div>
+                    <div class="left-symbols">
+                        <i class="fa-regular fa-heart left-player-symbol heart"></i>
+                        <i class="fa-regular fa-folder left-player-symbol"></i>
+                    </div>
+                </div>
+                <div class="center-footer">
+                    <div class="commands">
+                        <i class="fa-solid fa-shuffle command-symbol"></i>
+                        <i class="fa-solid fa-backward-step command-symbol"></i>
+                        <i class="fa-regular fa-circle-play play"></i>
+                        <i class="fa-solid fa-forward-step command-symbol"></i>
+                        <i class="fa-solid fa-rotate-right command-symbol"></i>
+                    </div>
+                    <div class="bar">
+                        <div class="listened"></div>
+                    </div>
+                </div>
+                <div class="right-footer"></div>
+            </div>
+        </footer>
         <!-- end footer -->
     </div>
 </body>
