Add: center footer responsiveness

--- a/index.html
+++ b/index.html
@@ -165,11 +165,17 @@
                         <i class="fa-solid fa-forward-step command-symbol"></i>
                         <i class="fa-solid fa-rotate-right command-symbol"></i>
                     </div>
-                    <div class="bar">
-                        <div class="listened"></div>
+                    <div class="bar-section">
+                        <span class="listened-time">0:25</span>
+                        <div class="bar">
+                            <div class="listened-bar"></div>
+                        </div>
+                        <span class="song-total-duration">4:35</span>
                     </div>
                 </div>
-                <div class="right-footer"></div>
+                <div class="right-footer">
+                    
+                </div>
             </div>
         </footer>
         <!-- end footer -->
