Add: completed layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -174,7 +174,14 @@
                     </div>
                 </div>
                 <div class="right-footer">
-                    
+                        <div class="right-footer-symbols">
+                        <i class="fa-solid fa-list right-symbol"></i>
+                        <i class="fa-solid fa-tv right-symbol"></i>
+                        <i class="fa-solid fa-volume-high right-symbol"></i>
+                    </div>
+                    <div class="bar">
+                        <div class="listened-bar"></div>
+                    </div>
                 </div>
             </div>
         </footer>
