--- a/index.html
+++ b/index.html
@@ -25,12 +25,21 @@
                     <a href=""><img src="img/logo-small.svg" alt="Spotify small logo" class="small-logo"></a>
                     <!-- navigation list -->
                     <ul class="navigation-list">
-                        <li class="gray"><a href=""><img src="img/home.svg" alt="home icon" class="list-icon gray">
-                        <span class="text">Home</span></a></li>
-                        <li class="gray"><a href=""><img src="img/search.svg" alt="search icon" class="list-icon gray">
-                        <span class="text">Cerca</span></a></li>
-                        <li class="gray"><a href=""><img src="img/libreria.svg" alt="book shelf icon" class="list-icon gray">
-                        <span class="text">La tua libreria</span></a></li>
+                        <li class="gray relative"><a href="">
+                            <div class="green-line-vertical"></div>
+                            <img src="img/home.svg" alt="home icon" class="list-icon gray">
+                            <span class="text">Home</span></a>
+                        </li>
+                        <li class="gray relative"><a href="">
+                            <div class="green-line-vertical"></div>
+                            <img src="img/search.svg" alt="search icon" class="list-icon gray">
+                            <span class="text">Cerca</span></a>
+                        </li>
+                        <li class="gray relative"><a href="">
+                            <div class="green-line-vertical"></div>
+                            <img src="img/libreria.svg" alt="book shelf icon" class="list-icon gray">
+                            <span class="text">La tua libreria</span></a>
+                        </li>
                     </ul>
                     <!-- end navigation list -->
                     <!-- playlist -->
@@ -69,12 +78,27 @@
                         <ul class="categories-list ">
                             <li class="gray relative">
                                 <a href="">In evidenza</a>
-                                <div class="green-line"></div></li>
-                            <li class="gray"><a href="">Podcast</a></li>
-                            <li class="gray"><a href="">Classifiche</a></li>
-                            <li class="gray"><a href="">Generi e mood</a></li>
-                            <li class="gray"><a href="">Nuove uscite</a></li>
-                            <li class="gray"><a href="">Scopri</a></li>
+                                <div class="green-line-horizontal"></div></li>
+                            <li class="gray relative">
+                                <a href="">Podcast</a>
+                                <div class="green-line-horizontal"></div>
+                            </li>
+                            <li class="gray relative">
+                                <a href="">Classifiche</a>
+                                <div class="green-line-horizontal"></div>
+                            </li>
+                            <li class="gray relative">
+                                <a href="">Generi e mood</a>
+                                <div class="green-line-horizontal"></div>
+                            </li>
+                            <li class="gray relative">
+                                <a href="">Nuove uscite</a>
+                                <div class="green-line-horizontal"></div>
+                            </li>
+                            <li class="gray relative">
+                                <a href="">Scopri</a>
+                                <div class="green-line-horizontal"></div>
+                            </li>
                         </ul>
                         <div class="green-line"></div>
                     </div>
