--- a/index.html
+++ b/index.html
@@ -107,34 +107,49 @@
                     <div class="grid">
                         <div class="card">
                             <div class="albums">
-                                <img src="img/metal_lifting.jpg" alt="Heavy Metal collection">
-                                <i class="fa-regular fa-circle-play play-hover"></i>
+                                <img src="img/metal_lifting.jpg" alt="Heavy Metal collection" class="photo">
+                                <span class="play-hover"><i class="fa-regular fa-circle-play"></i></span>
                             </div>
                             <h5 class="song-title">Heavy metal</h5>
                             <div class="album-subtitle">Subtitle</div>
                         </div>
                         <div class="card">
-                            <img src="img/stranger.jpeg" alt="Stranger Things" class="albums">
+                            <div class="albums">
+                                <img src="img/stranger.jpeg" alt="Stranger Things" class="photo">
+                                <span class="play-hover"><i class="fa-regular fa-circle-play"></i></span>
+                            </div>
                             <h5 class="song-title">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h5>
                             <div class="album-subtitle">Kyle Dixon and Michael Stein</div>
                         </div>
                         <div class="card">
-                            <img src="img/aquietplace.jpeg" alt="A Quiet place" class="albums">
+                            <div class="albums">
+                                <img src="img/aquietplace.jpeg" alt="A Quiet place" class="photo">
+                                <span class="play-hover"><i class="fa-regular fa-circle-play"></i></span>
+                            </div>
                             <h5 class="song-title">A quiet place</h5>
                             <div class="album-subtitle">Subtitle</div>
                         </div>
                         <div class="card">
-                            <img src="img/split.jpeg" alt="Split" class="albums">
+                            <div class="albums">
+                                <img src="img/split.jpeg" alt="Split" class="photo">
+                                <span class="play-hover"><i class="fa-regular fa-circle-play"></i></span>
+                            </div>
                             <h5 class="song-title">Split</h5>
                             <div class="album-subtitle">Subtitle</div>
                         </div>
                         <div class="card">
-                            <img src="img/cure.jpeg" alt="A cure for wellness" class="albums">
+                            <div class="albums">
+                                <img src="img/cure.jpeg" alt="A cure for wellness" class="photo">
+                                <span class="play-hover"><i class="fa-regular fa-circle-play"></i></span>
+                            </div>
                             <h5 class="song-title">A cure for wellness</h5>
                             <div class="album-subtitle">Subtitle</div>
                         </div>
                         <div class="card">
-                            <img src="img/sinister.jpeg" alt="Sinister" class="albums">
+                            <div class="albums">
+                                <img src="img/sinister.jpeg" alt="Sinister" class="photo">
+                                <span class="play-hover"><i class="fa-regular fa-circle-play"></i></span>
+                            </div>
                             <h5 class="song-title">Sinister</h5>
                             <div class="album-subtitle">Subtitle</div>
                         </div>
@@ -145,11 +160,17 @@
                     <div class="content-subtitle">Più ascolti, più accurati saranno i suggerimenti.</div>
                     <div class="grid">
                         <div class="card">
-                            <img src="img/radar.jpeg" alt="Release radar" class="albums">
+                            <div class="albums">
+                                <img src="img/radar.jpeg" alt="Release radar" class="photo">
+                                <span class="play-hover"><i class="fa-regular fa-circle-play"></i></span>
+                            </div>
                             <h5 class="song-title">Release radar</h5>
                         </div>
                         <div class="card">
-                            <img src="img/mixdaily.jpeg" alt="Daily mix" class="albums">
+                            <div class="albums">
+                                <img src="img/mixdaily.jpeg" alt="Daily mix" class="photo">
+                                <span class="play-hover"><i class="fa-regular fa-circle-play"></i></span>
+                            </div>
                             <h5 class="song-title">Daily mix 1</h5>
                         </div>
                     </div>
@@ -159,11 +180,15 @@
                     <div class="content-subtitle">Più ascolti, più accurati saranno i suggerimenti.</div>
                     <div class="grid">
                         <div class="card">
-                            <img src="img/youg.jpeg" alt="Lana Del Rey Youg" class="albums singers">
+                            <div class="albums">
+                                <img src="img/youg.jpeg" alt="Lana Del Rey Youg" class="photo singers">
+                            </div>
                             <h5 class="song-title">Lana Del Rey</h5>
                         </div>
                         <div class="card">
-                            <img src="img/einaudi.jpeg" alt="Ludovico Einaudi" class="albums singers">
+                            <div class="albums">
+                                <img src="img/einaudi.jpeg" alt="Ludovico Einaudi" class="photo singers">
+                            </div>
                             <h5 class="song-title">Ludovico Einaudi</h5>
                         </div>
                     </div>
